[regression][bisected] Screen backlight is turned off when I press the Brightness Down key
Brief summary of the problem:
After a suspend and resume, screen backlight is turned off when I press the Brightness Down key. I can only see the content on screen with a flashlight.
It's a Lenovo Ideapad S540-13ARE laptop.
Hardware description:
- CPU: AMD Ryzen 7 4800U with Radeon Graphics
- GPU: integrated
- System Memory: 16 GB
- Display(s): laptop display
- Type of Diplay Connection: eDP
System infomration:
- Distro name and Version: Arch Linux latest
- Kernel version: 5.11.4
- Custom kernel: N/A
- AMD package version: No package
How to reproduce the issue:
- Boot and login to TTY.
- Suspend with
sudo systemctl suspend
. - Resume.
- Press the Brightness Down key.
- Result: Screen backlight is off.
(Similar behavior is also found in KDE.)
Bisecting
Bisecting between 5.10 to 5.11 gives me this:
5fe6b98ae00dc2e0ac24ef8a45d828b82a4aae90 is the first bad commit
commit 5fe6b98ae00dc2e0ac24ef8a45d828b82a4aae90
Author: Bhawanpreet Lakha <Bhawanpreet.Lakha@amd.com>
Date: Fri Nov 13 15:04:54 2020 -0500
drm/amd/display: Update dmub code
There is a delta in the dmub code
- add boot options
- add boot status
- remove unused auto_load_is_done func pointer
Signed-off-by: Bhawanpreet Lakha <Bhawanpreet.Lakha@amd.com>
Reviewed-by: Nicholas Kazlauskas <nicholas.kazlauskas@amd.com>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>
drivers/gpu/drm/amd/display/dmub/dmub_srv.h | 20 ++++++++++++++++-
drivers/gpu/drm/amd/display/dmub/inc/dmub_cmd.h | 3 ++-
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn20.c | 23 ++++++++++++++++++++
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn20.h | 6 ++++++
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn21.c | 5 -----
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn21.h | 2 --
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn30.c | 5 -----
drivers/gpu/drm/amd/display/dmub/src/dmub_dcn30.h | 1 -
drivers/gpu/drm/amd/display/dmub/src/dmub_srv.c | 26 +++++++++++++++++------
9 files changed, 70 insertions(+), 21 deletions(-)
Reverting 5fe6b98ae00dc2e0ac24ef8a45d828b82a4aae90 on 5.11.4 branch fixes the issue for me.
Attached files:
No useful logs found.
With drm log level 0xFF (echo 0xFF > /sys/module/drm/parameters/debug
), I only see this:
[drm:amdgpu_acpi_event [amdgpu]] event, device_class = video, type = 0x87
Edited by Rvfg